2001-08-26  James Henstridge  <james@daa.com.au>

	* gtkmodule.c, gdkimlibmodule.c, gdkpixbufmodule.c: fix up
	#ifdef's for including numpy header.

2001-08-14  James Henstridge  <james@daa.com.au>

	* generate/generate.py (FunctionDefsParser): various changes to
	check for NULL returns from functions that return strings, objects
	or boxed types.

2001-05-30  Johan Dahlin  <zilch.am@home.se>

	* pygdkpixbuf.h: in the init_macro: s/_gdkpixbuf/gdkpixbuf/

2001-04-23  James Henstridge  <james@daa.com.au>

	* Makefile.am (python_PYTHON): don't install Gtkinter anymore.
	The warning not to use this has been there long enough.

	* gtk.py: add support for functions added by Fabien's patch

	Patch from Fabien COUTANT <fcoutant@freesurf.fr>
	
	* gtkmodule.c: add {append,prepend,insert}_element methods for
	GtkToolbar.  This isn't implemented quite like in Fabien's patch.

	* generate/gtkranges.defs (GtkRuler): add field position.

	* generate/gtkmenus.defs (gtk_menu_ensure_uline_accel_group): add
	function wrapper.

	* generate/gtkcontainers.defs (GtkScrolledWindow): add fields
	hscrollbar and vscrollbar.


	
	* gtkmodule.c (PyGdkEvent_GetAttr): implement __members__
	attribute.

	* pygtk.spec: up version.

	* configure.in: up version number to 0.6.8

2001-04-22  James Henstridge  <james@daa.com.au>

	* gtk.py (GtkWidget): add here as well.

	* generate/gtkbase.defs: add missing queue_draw_area, queue_clear
	and queue_clear_area methods of GtkWidget.

	* gdkpixbufmodule.c: add GdkPixbufAnimation support.

	* gtkmodule.c (PyGdkGC_set_clip_rectangle): add function, using
	patch from Buzz Megg <buzmeg@hotmail.com>

2001-04-21  James Henstridge  <james@daa.com.au>

	* pygtk.spec: create devel subpackage to hold all the development
	files.

	* Makefile.am, pyglade/Makefile.am: use newer var names.

	* acinclude.m4: include updated macro.

	* configure.in: use my more useful AM_PATH_PYTHON_JH macro that
	does a python version check.
