@@ -1,3 +1,10 @@
+2001-10-10  Johan Dahlin  <zilch.am@home.se>
+
+	Integrated patch from Christian Reis.
+	
+	"The attached patch adds a check for the environment variable
+	PYGTK_NO_THREADS and disables threading in runtime if it is set."
+
 2001-08-26  James Henstridge  <james@daa.com.au>
 
 	* gtkmodule.c, gdkimlibmodule.c, gdkpixbufmodule.c: fix up
